# whack-a-link

./: .env  Cargo.toml  config.toml.example  docker-compose.yml  env.postgres
benches/: fnv_bench.rs
migrations/: 20240407185709_links.up.sql
src/: config.rs  fnv.rs  lib.rs  main.rs
src/domain/: link.rs  mod.rs  shortcode.rs  shorturl.rs  url.rs
src/storage/: db_connect.rs  mod.rs  storage_shortcode.rs
src/webapp/: error.rs  middlewares.rs  mod.rs  routes.rs  webapp.rs
tests/: can_shorten_test.rs  health_check_test.rs
tests/common/: helpers.rs
