[package]
name = "whack_a_link"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7.5"
external_url = { version = "2.5.0", package = "url" }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }

[dev-dependencies]
criterion = "0.5.1"
fake = "2.9.2"
reqwest = { version = "0.12.3", features = ["json"] }
serde_json = "1.0.115"

[[bench]]
name = "fnv_bench"
harness = false
